Update H1 Margis to fix overlap with nav

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -238,6 +238,7 @@ header {
   padding: 0 20px; }
 
 .hero .content h1 {
+  margin-top: 100px;
   font-size: 55px; }
 
 .hero .content p {
